--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         android:theme="@style/Theme.MyPetDiary"
         tools:targetApi="31">
         <activity
+            android:name=".activity.popup.MenuSelectPop"
+            android:exported="false" />
+        <activity
             android:name=".activity.pet.PetMainHomeActivity"
             android:exported="false" />
 
@@ -51,7 +54,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.write.VeterinaryDiary"
+            android:name=".activity.write.VeterinaryDiaryActivity"
             android:exported="false" />
         <activity
             android:name=".activity.user.UserJoinActivity"
@@ -70,7 +73,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.main.NewUserMainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".activity.main.HomeActivity"
             android:exported="false" /> <!-- image crop -->
